# retro-ai

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json.example  CONTRIBUTING.md  LICENSE  README.md  SPEC.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup_env.sh  tox.ini
.github/workflows/: ci.yml
.kiro/specs/agent-training-pipeline/: .config.kiro  design.md  requirements.md  tasks.md
.kiro/specs/game-reward-discovery/: .config.kiro  design.md  requirements.md  tasks.md
.kiro/specs/retro-ai-framework/: .config.kiro  design.md  requirements.md  tasks.md
.kiro/steering/: pre-commit.md
docs/: adding_emulators.md  api_reference.md  getting_started.md  reward_systems.md
emulators/mo5/: CMakeLists.txt
emulators/mo5/include/mo5/: mo5_core.h
emulators/mo5/src/: mo5_stub.cpp
emulators/videopac/: CMakeLists.txt
emulators/videopac/include/videopac/: videopac_core.h
emulators/videopac/src/: videopac_stub.cpp
examples/: CMakeLists.txt  basic_training.py  custom_rewards.py  gymnasium_integration.py  multi_emulator.py
game_profiles/: README.md  course_automobile_training.yaml  satellite_attack_training.yaml  videopac_course_automobile.yaml  videopac_satellite_attack.yaml  videopac_satellite_attack_memory.yaml
include/retro_ai/: exceptions.hpp  mo5_rl.hpp  reward_system.hpp  rl_interface.hpp  videopac_rl.hpp
include/retro_ai/reward_systems/: custom.hpp  intrinsic.hpp  memory.hpp  survival.hpp  vision.hpp
output/course_automobile/: config.yaml  summary.json
python/: bindings.cpp
python/retro_ai/: __init__.py
python/retro_ai/core/: __init__.py  config.py  logging.py  preprocessing.py
python/retro_ai/envs/: __init__.py  base_env.py
python/retro_ai/training/: __init__.py  callbacks.py  cli.py  config.py  evaluation.py  game_profile.py  inference.py  metrics.py  pipeline.py  video.py
python/retro_ai/wrappers/: __init__.py  gymnasium_wrapper.py
scripts/: debug_framebuffer.py  debug_vision_ocr.py  framebuffer_visualizer.py  ram_watcher.py  smoke_test_videopac.py  test_native.py
src/: mo5_rl.cpp  reward_systems.cpp  videopac_rl.cpp
src/reward_systems/: custom.cpp  intrinsic.cpp  memory.cpp  survival.cpp  vision.cpp
tests/: CMakeLists.txt
tests/python/: test_exceptions.py  test_gymnasium_wrapper.py  test_logging.py  test_preprocessing.py
tests/python/test_training/: test_game_profile_smoke.py
